# PROGRAMMING-3-SEM

./: README.md
1 Лабораторная работа/: main.py  Задание.md
Лабараторная работа 1/: gen_bin_tree_recursive.py  main.py  non_gen_bin_tree_recursive.py
Лабараторная работа 3-4/: exceptions.py  logger_config.py  main.py  non_recursive_tree.py  recursive_tree.py
Лабараторная работа 5/: database_connection.py  database_output.py  decorator_all.py  lab5.db  logger  main.py
Лабараторная работа 8/: crud.py  library.db  main.py  models.py  pyproject.toml
Лабараторная работа 9/: main.py  Задания.md
Лабораторная работа 10/: README.md  pyproject.toml
Лабораторная работа 10/source/: conf.py  index.rst
Лабораторная работа 2/: gen_bin_tree_recursive.py  non_gen_bin_tree_recursive.py  pyproject.toml  test_cases.py  test_complex-profiling.py  test_timeit.py
Лабораторная работа 2/solve/: complex_profiling.py  iterative_binary_tree.py  main.py  recursive_binary_tree.py  test_binary_tree.py
Лабораторная работа 6/: README.md
