[tool.poetry]
name = "лабораторная работа 10"
version = "0.1.0"
description = ""
authors = ["Alexander Volzhanin <alexandervolzhanin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
